fixed horizontal alignment
browser compatibility

--- a/style.css
+++ b/style.css
@@ -43,15 +43,17 @@ body {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-/*div{
+
+#middle{
   position: absolute;
   top: 50%;
-  left: 50%;
-  margin: 0 auto;
-  -ms-transform: translateY(-50%, -50%);
+  -ms-transform: translateY(-50%); 
   -webkit-transform: translateY(-50%);
-  transform: translate(-50%, -50%);
-}*/
+  transform: translateY(-50%);
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+}
 
 p {
   text-decoration: none;
@@ -68,7 +70,7 @@ p {
   left:95%;
   max-height: 300px;
   width:30px;
-  padding-right: 20px;
+  margin-right: 30px;
   position: absolute;
   top: 50%;
   -ms-transform: translateY(-50%); 
